--- a/02_Week_vector_search/vector_search_qdrant.ipynb
+++ b/02_Week_vector_search/vector_search_qdrant.ipynb
@@ -5,7 +5,7 @@
    "id": "01705e21",
    "metadata": {},
    "source": [
-    "Vector Search Qdrant"
+    "# Vector Search con Qdrant"
    ]
   },
   {
@@ -23,7 +23,7 @@
    "source": [
     "Primero asegúrate de correr e instalar las dependencias necesarias.\n",
     "Y dejar el contenedor corriendo. <p>\n",
-    "Setup: [set_up_qdrant](02_Week_vector_search/set_up_qdrant.md)"
+    "Setup: [set_up_qdrant](https://github.com/Halsey26/llm-zoomcamp/blob/main/02_Week_vector_search/set_up_qdrant.md)"
    ]
   },
   {
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "062cc819",
    "metadata": {},
    "outputs": [],
@@ -810,6 +810,7 @@
     "random_course= random.choice(documentos)\n",
     "course_document_element= random.choice(random_course['documents'])\n",
     "random_question = course_document_element['question']\n",
+    "original_answer= course_document_element['text']\n",
     "\n",
     "curso= random_course['course']"
    ]
@@ -881,23 +882,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 65,
    "id": "85b52ed9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ScoredPoint(id=210, version=0, score=0.8856798, payload={'text': 'Ans :  While real-time analytics might not be explicitly mentioned, BigQuery has real-time data streaming capabilities, allowing for potential integration in future project iterations.', 'section': 'Module 3: Data Warehousing', 'course': 'data-engineering-zoomcamp'}, vector=None, shard_key=None, order_value=None)"
+       "'Ans :  While real-time analytics might not be explicitly mentioned, BigQuery has real-time data streaming capabilities, allowing for potential integration in future project iterations.'"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "resultado.points[0]"
+    "result= resultado.points[0].payload['text']\n",
+    "result"
    ]
   },
   {
@@ -909,17 +911,248 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "cd002e14",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pregunta: GCP BQ - Can I use BigQuery for real-time analytics in this project?\n",
+      "\n",
+      "Respuesta original: Ans :  While real-time analytics might not be explicitly mentioned, BigQuery has real-time data streaming capabilities, allowing for potential integration in future project iterations.\n",
+      "\n",
+      "Respuesta Vector Search Qdrant: Ans :  While real-time analytics might not be explicitly mentioned, BigQuery has real-time data streaming capabilities, allowing for potential integration in future project iterations.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Pregunta: {random_question}\\n\")\n",
+    "\n",
+    "print(f'Respuesta original: {original_answer}\\n')\n",
+    "print(f\"Respuesta Vector Search Qdrant: {result}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "b3511609",
    "metadata": {},
-   "source": []
+   "source": [
+    "Ahora con una pregunta nueva"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "9af3ba8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Ans :  While real-time analytics might not be explicitly mentioned, BigQuery has real-time data streaming capabilities, allowing for potential integration in future project iterations.'"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resultado.points[0].payload['text']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "17783730",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'If you have submitted two projects (and peer-reviewed at least 3 course-mates’ projects for each submission), you will get the certificate for the course. According to the course coordinator, Alexey Grigorev, only two projects are needed to get the course certificate.\\n(optional) David Odimegwu'"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resultado1= search('how can I get the certificate?')\n",
+    "resultado1= resultado1.points[0].payload['text']\n",
+    "resultado1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5352fe39",
+   "metadata": {},
+   "source": [
+    "## 6. Similiraty Search con filtros"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cec56f1f",
+   "metadata": {},
+   "source": [
+    "Como se había mencionado en la definición de los puntos [set_up_qdrant](). La metadata puede ser almacenada en el payload, para después usarla como filtros.\n",
+    "\n",
+    "En este caso, se había definido el payload = (text, section, course). Entonces, podemos realizar la búsqueda para un curso o sección en específico.\n",
+    "\n",
+    "Qdrant soporte diferente tipos de filtros, como:\n",
+    "- must, todas las condiciones se cumplan\n",
+    "- should, \n",
+    "- must_not\n",
+    "- range, \n",
+    "\n",
+    "Para realizar un eficiente filtrado, necesitamos habilitar el indexado del Payload."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86cf0e4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# indexación del payload\n",
+    "cliente.create_payload_index(\n",
+    "    collection_name= nombre_coleccion,\n",
+    "    field_name= \"course\",\n",
+    "    field_schema= \"keyword\" # realizar un match exacto en los campos de metadata\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e094f6b",
+   "metadata": {},
+   "source": [
+    "Actualizamos la funcions **search**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6d552aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def search(query, limit= 1):\n",
+    "    results = cliente.query_points(\n",
+    "        collection_name= nombre_coleccion,\n",
+    "        query = models.Document( #realiza el embedding de la query localmente con el modelo elegido\n",
+    "            text= query, \n",
+    "            model = modelo_seleccionado\n",
+    "        ),\n",
+    "        limit = limit, # cantidad de respuestas\n",
+    "        with_payload=True  # para obtener la metada en los resultados \n",
+    "    )\n",
+    "    return results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "5909345b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def search_filter(query, course, limit=1):\n",
+    "    results = cliente.query_points(\n",
+    "        collection_name= nombre_coleccion,\n",
+    "        query = models.Document(\n",
+    "            text= query, \n",
+    "            model= modelo_seleccionado\n",
+    "        ), \n",
+    "        query_filter= models.Filter( # filtramos por el curso\n",
+    "            must = [\n",
+    "                models.FieldCondition(\n",
+    "                    key= \"course\", \n",
+    "                    match= models.MatchValue(value= course)\n",
+    "                )\n",
+    "            ]\n",
+    "        ),\n",
+    "\n",
+    "        limit = limit, \n",
+    "        with_payload=True\n",
+    "    )\n",
+    "    return results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "997bfe0c",
+   "metadata": {},
+   "source": [
+    "Cursos del FaQ Zoomcamp:\n",
+    "- data-engineering-zoomcamp\n",
+    "- machine-learning-zoomcamp\n",
+    "- mlops-zoomcamp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "8da602e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'If you have submitted two projects (and peer-reviewed at least 3 course-mates’ projects for each submission), you will get the certificate for the course. According to the course coordinator, Alexey Grigorev, only two projects are needed to get the course certificate.\\n(optional) David Odimegwu'"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resultado_filtro= search_filter('how can I get the certificate?', 'machine-learning-zoomcamp').points[0].payload['text']\n",
+    "resultado_filtro"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7824575a",
+   "metadata": {},
+   "source": [
+    "## ¿Qué se ha realizado en este notebook?\n",
+    "- Importanción de librerias.\n",
+    "- Creación del cliente con qdrant.\n",
+    "- Almacenamiento del dataset a trabajar.\n",
+    "- Análisis de dataset: estructura, tipo de data, etc\n",
+    "- Se definen los campos para semantic search y para almacenar en la metadata.\n",
+    "- Evaluación y selección de modelo de embedding en base a los campos definidos.\n",
+    "- Configuración con Qdrant\n",
+    "    1. Se crea la colección\n",
+    "    2. Creación e inserción de puntos en la colección\n",
+    "    3. Visualizamos la colección actualizada en http://127.0.0.1:6333/dashboard\n",
+    "- Búsqueda por similitud Qdrant.\n",
+    "- Búsqueda por similitud usando filtros.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b73b34d9",
+   "metadata": {},
+   "source": [
+    "**¿Qué sigue?**\n",
+    "[Hybrid Search](), que combina las búsquedas basadas en keywords y vector search. Lo que ofrece mejores resultados por la precisión de la primera técnica con la flexibilidad de la segunda, mejorando el performance."
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "30908c35",
    "metadata": {},
    "source": [
-    "realizar un md con resumen de los pasos desde la creacion de coleccion, puntos, insercion en coleccion, y busqueda. Especificar solo los comandos, no incluir mucho detalle, derivar a este notebook para más profundidad\n"
+    "nota: realizar un md con resumen de los pasos desde la creacion de coleccion, puntos, insercion en coleccion, y busqueda. Especificar **solo** los comandos, no incluir mucho detalle, derivar a este notebook para más profundidad.\n"
    ]
   }
  ],
