rag_vector-search

--- a/02_Week_vector_search/vector_search_qdrant.ipynb
+++ b/02_Week_vector_search/vector_search_qdrant.ipynb
@@ -58,13 +58,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "5b8b65ab",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Inicializamos el cliente\n",
-    "cliente = QdrantClient(\"http://localhost:6333\")"
+    "cliente = QdrantClient(\"http://localhost:6333\")\n",
+    "#para acceder a la interfaz: http://localhost:6333/dashboard"
    ]
   },
   {
@@ -1034,26 +1035,6 @@
    "metadata": {},
    "source": [
     "Actualizamos la funcions **search**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f6d552aa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def search(query, limit= 1):\n",
-    "    results = cliente.query_points(\n",
-    "        collection_name= nombre_coleccion,\n",
-    "        query = models.Document( #realiza el embedding de la query localmente con el modelo elegido\n",
-    "            text= query, \n",
-    "            model = modelo_seleccionado\n",
-    "        ),\n",
-    "        limit = limit, # cantidad de respuestas\n",
-    "        with_payload=True  # para obtener la metada en los resultados \n",
-    "    )\n",
-    "    return results"
    ]
   },
   {
