--- a/02_Week_vector_search/rag_vector_search.ipynb
+++ b/02_Week_vector_search/rag_vector_search.ipynb
@@ -979,6 +979,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "83d87fa8",
+   "metadata": {},
+   "source": [
+    "El documento con mayor similitud es el primero, indice 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "eee19c7e",
    "metadata": {},
    "source": [
@@ -1025,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "id": "51023cd5",
    "metadata": {},
    "outputs": [
@@ -1040,9 +1048,11 @@
    ],
    "source": [
     "modelos= TextEmbedding.list_supported_models()\n",
-    "modelos\n",
+    "modelo_seleccionado = \"\"\n",
     "for model in modelos:\n",
     "    if model['model']== 'BAAI/bge-small-en':\n",
+    "        modelo_seleccionado=model['model'] #redudante, pero para establecer que se utiliza este modelo\n",
+    "        dimension= model['dim']\n",
     "        print(f'Modelo: {model['model']} \\nDimension: {model['dim']}')  "
    ]
   },
@@ -1068,11 +1078,257 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8d02dfb1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import requests \n",
+    "\n",
+    "docs_url = 'https://github.com/alexeygrigorev/llm-rag-workshop/raw/main/notebooks/documents.json'\n",
+    "docs_response = requests.get(docs_url)\n",
+    "documents_raw = docs_response.json()\n",
+    "\n",
+    "\n",
+    "documents = []\n",
+    "\n",
+    "for course in documents_raw:\n",
+    "    course_name = course['course']\n",
+    "    if course_name != 'machine-learning-zoomcamp':\n",
+    "        continue\n",
+    "\n",
+    "    for doc in course['documents']:\n",
+    "        doc['course'] = course_name\n",
+    "        documents.append(doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "84704b6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'BAAI/bge-small-en'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "modelo_seleccionado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "0ba4347b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# conexion con qdrant\n",
+    "from qdrant_client import QdrantClient, models\n",
+    "cliente= QdrantClient('http://localhost:6333') # correr el contenedor de qdrant previamente\n",
+    "modelo = modelo_seleccionado"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bdf375de",
+   "metadata": {},
+   "source": [
+    "Se crea la Colección"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "959af174",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name_collection = 'homework2_collection'\n",
+    "cliente.create_collection(\n",
+    "    collection_name= name_collection,\n",
+    "    vectors_config= models.VectorParams(\n",
+    "        size= dimension,\n",
+    "        distance= models.Distance.COSINE\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ccae1261",
+   "metadata": {},
+   "source": [
+    "Nota: \n",
+    "Para este caso no es necesario hacer 'Indexación del payload' porque los documentos ya son para un solo curso: 'machine-learning-zoomcamp'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c95ecd32",
+   "metadata": {},
+   "source": [
+    "Creación de los puntos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9f2425b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cantidad de puntos: 375\n"
+     ]
+    }
+   ],
+   "source": [
+    "points = []\n",
+    "\n",
+    "for i,doc in enumerate(documents):\n",
+    "\n",
+    "    text = doc['question']+ ' '+doc['text']\n",
+    "    point = models.PointStruct(\n",
+    "        id= i,\n",
+    "        vector= models.Document(text= text, model=modelo), \n",
+    "        payload= doc\n",
+    "    )\n",
+    "    points.append(point)\n",
+    "    \n",
+    "print(f'Cantidad de puntos: {len(points)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09871be9",
+   "metadata": {},
+   "source": [
+    "Se actualiza o inserta los puntos a la colección"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "571cfee9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00,  8.34it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "UpdateResult(operation_id=0, status=<UpdateStatus.COMPLETED: 'completed'>)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cliente.upsert(\n",
+    "    collection_name= name_collection, \n",
+    "    points= points\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2cd9c2f9",
+   "metadata": {},
+   "source": [
+    "Función búsqueda"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "3b86806f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def vector_search(query, limit=1):\n",
+    "    results= cliente.query_points(\n",
+    "        collection_name= name_collection,\n",
+    "        query = models.Document(\n",
+    "            text= query,\n",
+    "            model= modelo\n",
+    "        ), \n",
+    "        limit=limit,\n",
+    "        with_payload=True\n",
+    "    )\n",
+    "    return results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "e5731fdb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query= 'I just discovered the course. Can I join now?'\n",
+    "rpta_busqueda= vector_search(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "c19990ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "score = rpta_busqueda.points[0].score\n",
+    "rpta=  rpta_busqueda.points[0].payload['text']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "716aface",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Respuesta: Yes, you can. You won’t be able to submit some of the homeworks, but you can still take part in the course.\n",
+      "In order to get a certificate, you need to submit 2 out of 3 course projects and review 3 peers’ Projects by the deadline. It means that if you join the course at the end of November and manage to work on two projects, you will still be eligible for a certificate.\n",
+      "\n",
+      "Puntaje: 0.8703172\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Respuesta: {rpta}\\n')\n",
+    "print(f'Puntaje: {score}')"
+   ]
   }
  ],
  "metadata": {
