--- a/workshops/workshop1.ipynb
+++ b/workshops/workshop1.ipynb
@@ -56,6 +56,105 @@
     "kuzu\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7fe9e08f",
+   "metadata": {},
+   "source": [
+    "**Estructura de un pipeline dlt:**\n",
+    "\n",
+    "1. Definir una fuente (puede ser una función generadora o iterable)\n",
+    "\n",
+    "2. Crear el pipeline\n",
+    "\n",
+    "3. Ejecutar el pipeline\n",
+    "\n",
+    "4. Ver información del resultado\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9163e9de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# EJEMPLO\n",
+    "\n",
+    "# import dlt\n",
+    "# import requests\n",
+    "\n",
+    "# # 1. Definir una fuente (puede ser una función generadora o iterable)\n",
+    "# def get_characters():\n",
+    "#     yield {\"name\": \"Jon Snow\", \"house\": \"Stark\"}\n",
+    "#     yield {\"name\": \"Daenerys Targaryen\", \"house\": \"Targaryen\"}\n",
+    "\n",
+    "# # 2. Crear el pipeline\n",
+    "# pipeline = dlt.pipeline(\n",
+    "#     pipeline_name=\"got_pipeline\",       # nombre del pipeline\n",
+    "#     destination=\"duckdb\",               # destino (puedes usar duckdb local para pruebas)\n",
+    "#     dataset_name=\"got_data\"             # nombre del dataset\n",
+    "# )\n",
+    "\n",
+    "# # 3. Ejecutar el pipeline\n",
+    "# load_info = pipeline.run(get_characters())\n",
+    "\n",
+    "# # 4. Ver información del resultado\n",
+    "# print(load_info)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02786ee5",
+   "metadata": {},
+   "source": [
+    "## **Data we'll be using**\n",
+    "\n",
+    "In this example, we’ll request data from an API that serves the **NYC taxi dataset**. For these purposes we created an API that can serve the data you are already familiar with.\n",
+    "\n",
+    "### **API documentation**:  \n",
+    "- **Data**: Comes in pages of 1,000 records.  \n",
+    "- **Pagination**: When there’s no more data, the API returns an empty page.  \n",
+    "- **Details**:  \n",
+    "  - **Method**: GET  \n",
+    "  - **URL**: `https://us-central1-dlthub-analytics.cloudfunctions.net/data_engineering_zoomcamp_api`  \n",
+    "  - **Parameters**:  \n",
+    "    - `page`: Integer (page number), defaults to 1.  \n",
+    "\n",
+    "Here’s how we design our requester:  \n",
+    "1. **Request page by page** until we hit an empty page. Since we don’t know how much data is behind the API, we must assume it could be as little as 1,000 records or as much as 10GB.\n",
+    "2. **Use a generator** to handle this efficiently and avoid loading all data into memory.  \n",
+    "\n",
+    "- nota: la data es para Junio de"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27ca40a1",
+   "metadata": {},
+   "source": [
+    "**Partición de la data**\n",
+    "Vamos a partir la data de la siguiente manera:\n",
+    "- primeros 10 días\n",
+    "- segundo 10 días\n",
+    "- último 10 días\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b71ab613",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
