--- a/03_Mod_Evaluation/search_evaluation/ground-truth-data.ipynb
+++ b/03_Mod_Evaluation/search_evaluation/ground-truth-data.ipynb
@@ -5,9 +5,7 @@
    "id": "b9f52bb3",
    "metadata": {},
    "source": [
-    "# Obtención del Ground Truth Data\n",
-    "\n",
-    "- Más detalles "
+    "# Obtención del Ground Truth Data\n"
    ]
   },
   {
@@ -20,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 34,
    "id": "0cda001c",
    "metadata": {},
    "outputs": [],
@@ -182,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "9ed8b4e3",
    "metadata": {},
    "outputs": [],
@@ -198,15 +196,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 35,
    "id": "8514bd15",
    "metadata": {},
    "outputs": [],
    "source": [
     "for doc in documentos:\n",
-    "    contenido_id = f\"{doc['course']}\" + f\"{doc['question']}\"+ f\"{doc['text'][:30]}\"\n",
+    "    contenido_id = f\"{doc['course']}\" + f\"{doc['question']}\"+ f\"{doc['text'][:10]}\"\n",
     "    id_codificado= hash_encode(contenido_id)\n",
-    "    id_codificado= id_codificado[:10]\n",
+    "    id_codificado= id_codificado[:8]\n",
     "\n",
     "    doc['id']= id_codificado\n",
     "    "
@@ -214,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 36,
    "id": "f71790a9",
    "metadata": {},
    "outputs": [
@@ -225,10 +223,10 @@
        " 'section': 'General course-related questions',\n",
        " 'question': 'Course - \\u200b\\u200bHow many hours per week am I expected to spend on this  course?',\n",
        " 'course': 'data-engineering-zoomcamp',\n",
-       " 'id': 'f1e7d212aa'}"
+       " 'id': 'de2be51c'}"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "id": "9a74fc1a",
    "metadata": {},
    "outputs": [
@@ -453,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 11,
    "id": "cf000ff6",
    "metadata": {},
    "outputs": [],
@@ -477,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 12,
    "id": "24dbe41a",
    "metadata": {},
    "outputs": [
@@ -491,7 +489,7 @@
        " 'id': 'f1e7d212aa'}"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,12 +536,12 @@
    "id": "a3cfe727",
    "metadata": {},
    "source": [
-    "### función con llm "
+    "### Función con llm "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "20b0cc32",
    "metadata": {},
    "outputs": [],
@@ -556,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 15,
    "id": "83e62425",
    "metadata": {},
    "outputs": [],
@@ -712,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 22,
    "id": "b5e359da",
    "metadata": {},
    "outputs": [],
@@ -725,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 23,
    "id": "80a73e4d",
    "metadata": {},
    "outputs": [
@@ -754,64 +752,97 @@
    "id": "f89e7525",
    "metadata": {},
    "source": [
-    "Convertirlo de json string a lista\n",
-    "<!-- lista_questions= json.loads(preguntas)  -->"
+    "Convertir los resultados de json string a lista\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "bec69362",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<unknown>:6: SyntaxWarning: invalid escape sequence '\\P'\n"
+     ]
+    }
+   ],
+   "source": [
+    "import ast\n",
+    "\n",
+    "resultados_lista = {}\n",
+    "# for id, questions in resultados.items():\n",
+    "#     resultados_lista[id]= json.loads(questions) \n",
+    "\n",
+    "resultados_lista = {key: ast.literal_eval(value) for key, value in resultados.items()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "b57db5d1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "str"
+       "['When does the course begin?',\n",
+       " 'How can I get the course schedule?',\n",
+       " 'What is the link for course registration?',\n",
+       " 'How can I receive course announcements?',\n",
+       " 'Where do I join the Slack channel?']"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(resultados['96606db2'])\n",
-    "for key, value in "
+    "resultados_lista['c02e79ef']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ca08c50",
+   "metadata": {},
+   "source": [
+    "Estructura FInal de **Ground Truth Data**:\n",
+    "- question - curso - id "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
-   "id": "0569f8a8",
+   "execution_count": null,
+   "id": "6d4f40d9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The purpose of this document is to capture frequently asked technical questions\n",
-      "The exact day and hour of the course will be 15th Jan 2024 at 17h00. The course will start with the first  “Office Hours'' live.1\n",
-      "Subscribe to course public Google Calendar (it works from Desktop only).\n",
-      "Register before the course starts using this link.\n",
-      "Join the course Telegram channel with announcements.\n",
-      "Don’t forget to register in DataTalks.Club's Slack and join the channel.\n",
-      "General course-related questions\n",
-      "Course - When will the course start?\n",
-      "data-engineering-zoomcamp\n",
-      "d3067a4159\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dicc= {'text': \"The purpose of this document is to capture frequently asked technical questions\\nThe exact day and hour of the course will be 15th Jan 2024 at 17h00. The course will start with the first  “Office Hours'' live.1\\nSubscribe to course public Google Calendar (it works from Desktop only).\\nRegister before the course starts using this link.\\nJoin the course Telegram channel with announcements.\\nDon’t forget to register in DataTalks.Club's Slack and join the channel.\",\n",
-    " 'section': 'General course-related questions',\n",
-    " 'question': 'Course - When will the course start?',\n",
-    " 'course': 'data-engineering-zoomcamp',\n",
-    " 'id': 'd3067a4159'}\n",
+    "ground_truth_data = []\n",
     "\n",
-    "for i in dicc.values():\n",
-    "    print(i)"
+    "doc_index = {d['id']: d for d in documentos}\n",
+    "doc_index\n",
+    "\n",
+    "for doc_id, questions in resultados_lista.items():\n",
+    "    curso= doc_index[doc_id]['course'] # ubica el curso en base al id\n",
+    "    for q in questions:\n",
+    "        ground_truth_data.append((q,curso, doc_id))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f385f6b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame(ground_truth_data, columns=['question', 'course', 'document'])\n",
+    "\n",
+    "df.to_csv('ground-truth-data.csv', index=False)\n"
    ]
   }
  ],
