--- a/03_Mod_Evaluation/search_evaluation/ground-truth-data.ipynb
+++ b/03_Mod_Evaluation/search_evaluation/ground-truth-data.ipynb
@@ -5,7 +5,13 @@
    "id": "b9f52bb3",
    "metadata": {},
    "source": [
-    "# Obtención del Ground Truth Data\n"
+    "# Obtención del Ground Truth Data\n",
+    "\n",
+    "Estrategia usada:\n",
+    "- for doc in documents:\n",
+    "    generate 5 questions\n",
+    "\n",
+    "Los resultados se almacenaran: pregunta-curso-documento"
    ]
   },
   {
