--- a/03_Mod_Evaluation/search_evaluation/ground-truth-data.ipynb
+++ b/03_Mod_Evaluation/search_evaluation/ground-truth-data.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "id": "0cda001c",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
     "docu_raw= docs_rpta.json()\n",
     "\n",
     "documentos= []\n",
-    "# se extrae solo los documentos con el nombre del curso agregado\n",
+    "# se extrae solo los documentos con el nombre del curso agregado (se aplanan)\n",
     "for i in docu_raw:\n",
     "    curso= i['course']\n",
     "    for doc in i['documents']:\n",
@@ -46,26 +46,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "066f0c68",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'text': \"The purpose of this document is to capture frequently asked technical questions\\nThe exact day and hour of the course will be 15th Jan 2024 at 17h00. The course will start with the first  “Office Hours'' live.1\\nSubscribe to course public Google Calendar (it works from Desktop only).\\nRegister before the course starts using this link.\\nJoin the course Telegram channel with announcements.\\nDon’t forget to register in DataTalks.Club's Slack and join the channel.\",\n",
+       "{'text': 'The course is available in the self-paced mode too, so you can go through the materials at any time. But if you want to do it as a cohort with other students, the next iterations will happen in September 2023, September 2024 (and potentially other Septembers as well).',\n",
        " 'section': 'General course-related questions',\n",
-       " 'question': 'Course - When will the course start?',\n",
-       " 'course': 'data-engineering-zoomcamp'}"
+       " 'question': 'When does the next iteration start?',\n",
+       " 'course': 'machine-learning-zoomcamp'}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "documentos[0]"
+    "documentos[450]"
    ]
   },
   {
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "id": "9ed8b4e3",
    "metadata": {},
    "outputs": [],
@@ -202,13 +202,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 28,
    "id": "8514bd15",
    "metadata": {},
    "outputs": [],
    "source": [
     "for doc in documentos:\n",
-    "    contenido_id = f\"{doc['course']}\" + f\"{doc['question']}\"+ f\"{doc['text'][:10]}\"\n",
+    "    contenido_id = f\"{doc['course']}-{doc['question']}-{doc['text'][:10]}\"\n",
     "    id_codificado= hash_encode(contenido_id)\n",
     "    id_codificado= id_codificado[:8]\n",
     "\n",
@@ -218,27 +218,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 30,
    "id": "f71790a9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'text': 'It depends on your background and previous experience with modules. It is expected to require about 5 - 15 hours per week. [source1] [source2]\\nYou can also calculate it yourself using this data and then update this answer.',\n",
+       "{'text': \"You don't need it. You're accepted. You can also just start learning and submitting homework without registering. It is not checked against any registered list. Registration is just to gauge interest before the start date.\",\n",
        " 'section': 'General course-related questions',\n",
-       " 'question': 'Course - \\u200b\\u200bHow many hours per week am I expected to spend on this  course?',\n",
+       " 'question': 'Course - I have registered for the Data Engineering Bootcamp. When can I expect to receive the confirmation email?',\n",
        " 'course': 'data-engineering-zoomcamp',\n",
-       " 'id': 'de2be51c'}"
+       " 'id': '0bbf41ec'}"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "documentos[10]"
+    "documentos[3]"
    ]
   },
   {
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "id": "9a74fc1a",
    "metadata": {},
    "outputs": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 36,
    "id": "da1c31b3",
    "metadata": {},
    "outputs": [],
@@ -288,12 +288,12 @@
     "\n",
     "for doc in documentos:\n",
     "    id= doc['id']\n",
-    "    id_hash[id].append(doc) # si hay valores repetidos agrupa en una misma llave los docs\n"
+    "    id_hash[id].append(doc) # si hay valores repetidos agrupa en una misma llave los docs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "id": "7114d8e5",
    "metadata": {},
    "outputs": [
@@ -316,12 +316,12 @@
    "id": "5a5938b1",
    "metadata": {},
    "source": [
-    "Al parecer hay 2 id repetidos, identificamos cuales son:"
+    "Al parecer hay 1 id con 2 documentos, identificamos cuales son:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "decce7a7",
    "metadata": {},
    "outputs": [
@@ -354,7 +354,7 @@
     }
    ],
    "source": [
-    "# necesitamos encontrar el en el diccionario la llave que tenga más de 1 valor en la lista\n",
+    "# necesitamos encontrar en el diccionario la llave que tenga más de 1 valor en la lista\n",
     "for key, value in id_hash.items():\n",
     "    if len(value) > 1:\n",
     "        id = key\n",
@@ -376,17 +376,17 @@
    "source": [
     "Ambos son iguales a pesar de ser registros diferentes, sin embargo esto se debe a su similitud de cada campo usado para la creación del id: course, question, text. \n",
     "\n",
-    "**Solución**: se puede ignorar o eliminar un registro según criterio. Se elimina el índice 657"
+    "**Solución**: se puede ignorar o eliminar un registro según criterio. Se ignora."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 39,
    "id": "f48910ad",
    "metadata": {},
    "outputs": [],
    "source": [
-    "del documentos[657]"
+    "# si se desea eliminar: del documentos[657]"
    ]
   },
   {
