--- a/03_Mod_Evaluation/search_evaluation/evaluacion_texto.ipynb
+++ b/03_Mod_Evaluation/search_evaluation/evaluacion_texto.ipynb
@@ -27,7 +27,15 @@
    "id": "759a47c6",
    "metadata": {},
    "source": [
-    "## Carga de documentos con id generados"
+    "## Carga de documentos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02ff1aba",
+   "metadata": {},
+   "source": [
+    "### Documentos con id"
    ]
   },
   {
@@ -69,28 +77,143 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "73b43425",
+   "metadata": {},
+   "source": [
+    "### Carga de Ground Truth Data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "c9ec7769",
+   "execution_count": 1,
+   "id": "b4888330",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>question</th>\n",
+       "      <th>course</th>\n",
+       "      <th>document</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>When does the course begin?</td>\n",
+       "      <td>data-engineering-zoomcamp</td>\n",
+       "      <td>c02e79ef</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>How can I get the course schedule?</td>\n",
+       "      <td>data-engineering-zoomcamp</td>\n",
+       "      <td>c02e79ef</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>What is the link for course registration?</td>\n",
+       "      <td>data-engineering-zoomcamp</td>\n",
+       "      <td>c02e79ef</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>How can I receive course announcements?</td>\n",
+       "      <td>data-engineering-zoomcamp</td>\n",
+       "      <td>c02e79ef</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Where do I join the Slack channel?</td>\n",
+       "      <td>data-engineering-zoomcamp</td>\n",
+       "      <td>c02e79ef</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "{'text': \"The purpose of this document is to capture frequently asked technical questions\\nThe exact day and hour of the course will be 15th Jan 2024 at 17h00. The course will start with the first  “Office Hours'' live.1\\nSubscribe to course public Google Calendar (it works from Desktop only).\\nRegister before the course starts using this link.\\nJoin the course Telegram channel with announcements.\\nDon’t forget to register in DataTalks.Club's Slack and join the channel.\",\n",
-       " 'section': 'General course-related questions',\n",
-       " 'question': 'Course - When will the course start?',\n",
-       " 'course': 'data-engineering-zoomcamp',\n",
-       " 'id': 'c02e79ef'}"
+       "                                    question                     course  \\\n",
+       "0                When does the course begin?  data-engineering-zoomcamp   \n",
+       "1         How can I get the course schedule?  data-engineering-zoomcamp   \n",
+       "2  What is the link for course registration?  data-engineering-zoomcamp   \n",
+       "3    How can I receive course announcements?  data-engineering-zoomcamp   \n",
+       "4         Where do I join the Slack channel?  data-engineering-zoomcamp   \n",
+       "\n",
+       "   document  \n",
+       "0  c02e79ef  \n",
+       "1  c02e79ef  \n",
+       "2  c02e79ef  \n",
+       "3  c02e79ef  \n",
+       "4  c02e79ef  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "documentos[0]"
+    "import pandas as pd\n",
+    "\n",
+    "df= pd.read_csv('ground-truth-data.csv')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8352fa6d",
+   "metadata": {},
+   "source": [
+    "Pero conviene usarlo como diccionario para poder recorrer cada "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "9dc57b27",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.frame.DataFrame"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1077ade",
+   "metadata": {},
+   "source": [
+    "https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.to_dict.html"
    ]
   },
   {
@@ -98,7 +221,18 @@
    "id": "a3b326db",
    "metadata": {},
    "source": [
-    "## Sistema RAG- Elastic Search. Recordar pasos:\n",
+    "## Búsqueda por similitud\n",
+    "Generamos los resultados por búsqueda de similitud usando Elastic Search y Minsearch.\n",
+    "Se usarán las querys de `ground-truth-data` "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7180ae4f",
+   "metadata": {},
+   "source": [
+    "###  Elastic Search\n",
+    "Recordar pasos:\n",
     "\n",
     "1. Importación de librería y Creación de cliente\n",
     "2. Indexación con elastic (configuración, creación e indexación de los documentos)\n",
@@ -138,6 +272,22 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ccad940",
+   "metadata": {},
+   "source": [
+    "###  Minsearch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65ce0fa4",
+   "metadata": {},
+   "source": [
+    "## Comparación Evaluacion Elastic Search - Minsearch"
+   ]
   }
  ],
  "metadata": {
